# Agentic-Trip-Planner-CrewAI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/agentic_trip_planner/: crew.py  main.py
src/agentic_trip_planner/config/: agents.yaml  tasks.yaml
src/agentic_trip_planner/tools/: currency_tool.py  tavily_tool.py
