[project]
name = "agentic_trip_planner"
version = "0.1.0"
description = "agentic-trip-planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = []

[project.scripts]
agentic_trip_planner = "agentic_trip_planner.main:run"
run_crew = "agentic_trip_planner.main:run"
train = "agentic_trip_planner.main:train"
replay = "agentic_trip_planner.main:replay"
test = "agentic_trip_planner.main:test"
run_with_trigger = "agentic_trip_planner.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
